# hubspot_s3_uploader

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  aws_client.py  config.py  extractor.py  gsheet_client.py  hubspot_client.py  main.py  processor.py  runner.py
hubspot_s3_uploader/: __init__.py  __main__.py  aws_client.py  config.py  extractor.py  hubspot_client.py  logger.py  runner.py  s3_client.py  sheet_sync.py  sheets_client.py
hubspot_s3_uploader/processors/: amazon_profile.py  base.py  buyer_product_profile.py  seller_product_profile.py
scripts/: run_etl.sh  run_job.py
